css path bug in index.html

--- a/talk/20171119-cafe-irit/index.html
+++ b/talk/20171119-cafe-irit/index.html
@@ -279,18 +279,18 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://smart-researchteam.github.io">
+<a class="btn btn-primary btn-outline" href="https://smart-researchteam.github.io/">
   PDF
 </a>
 
 
 
-<a class="btn btn-primary btn-outline" href="https://smart-researchteam.github.io">
+<a class="btn btn-primary btn-outline" href="https://smart-researchteam.github.io/">
   Slides
 </a>
 
 
-<a class="btn btn-primary btn-outline" href="https://smart-researchteam.github.io">
+<a class="btn btn-primary btn-outline" href="https://smart-researchteam.github.io/">
   Video
 </a>
 
