--- a/student/anas/index.html
+++ b/student/anas/index.html
@@ -39,8 +39,8 @@
 
   
 
-  <link rel="alternate" href="" type="application/rss+xml" title="SM@RT">
-  <link rel="feed" href="" type="application/rss+xml" title="SM@RT">
+  <link rel="alternate" href="" type="application/rss+xml" title="SM@RT: Smart Modeling for softw@re Research &amp; Technology">
+  <link rel="feed" href="" type="application/rss+xml" title="SM@RT: Smart Modeling for softw@re Research &amp; Technology">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -49,7 +49,7 @@
 
   
 
-  <title>Ingénierie des architectures logicielles sécurisées : patrons, modèles et analyses | SM@RT</title>
+  <title>Ingénierie des architectures logicielles sécurisées : patrons, modèles et analyses | SM@RT: Smart Modeling for softw@re Research &amp; Technology</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -66,7 +66,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">SM@RT</a>
+      <a class="navbar-brand" href="/">SM@RT: Smart Modeling for softw@re Research &amp; Technology</a>
     </div>
 
     
