--- a/publication/models16/index.html
+++ b/publication/models16/index.html
@@ -39,8 +39,8 @@
 
   
 
-  <link rel="alternate" href="" type="application/rss+xml" title="SM@RT: Smart Modeling for softw@re Research &amp; Technology">
-  <link rel="feed" href="" type="application/rss+xml" title="SM@RT: Smart Modeling for softw@re Research &amp; Technology">
+  <link rel="alternate" href="" type="application/rss+xml" title="SM@RT Team">
+  <link rel="feed" href="" type="application/rss+xml" title="SM@RT Team">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
@@ -49,7 +49,7 @@
 
   
 
-  <title>Joint Proceedings of the 12th Educators Symposium (EduSymp 2016) and 3rd International Workshop on Open Source Software for Model Driven Engineering (OSS4MDE 2016) | SM@RT: Smart Modeling for softw@re Research &amp; Technology</title>
+  <title>Joint Proceedings of the 12th Educators Symposium (EduSymp 2016) and 3rd International Workshop on Open Source Software for Model Driven Engineering (OSS4MDE 2016) | SM@RT Team</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -66,7 +66,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">SM@RT: Smart Modeling for softw@re Research &amp; Technology</a>
+      <a class="navbar-brand" href="/">SM@RT Team</a>
     </div>
 
     
