--- a/student/anas/index.html
+++ b/student/anas/index.html
@@ -143,7 +143,7 @@
         <li class="nav-item">
           <a href="/#students">
             
-            <span>Students</span>
+            <span>Thesis</span>
           </a>
         </li>
 
@@ -185,6 +185,11 @@
 <article class="article" itemscope itemtype="http://schema.org/Article">
 
   
+<div class="article-header">
+  <img src="/img/portrait.jpg" class="article-banner" itemprop="image">
+  
+</div>
+
 
 
   <div class="article-container">
@@ -324,7 +329,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2018. Last update: 15/01/2018 &middot; 
+      &copy; 2018. Last update: 2018/02/06 &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
