publish new version with twitter feed

--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
           
         </ul>
       </div>
+      <div class="col-sm-7">
+        <a class="twitter-timeline" data-width="600" data-height="300" data-theme="light" href="https://twitter.com/SmartModelTeam?ref_src=twsrc%5Etfw">Last tweets by SmartModelTeam</a> 
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+      </div>
       
 
     </div>
