--- a/public/student/renan/index.html
+++ b/public/student/renan/index.html
@@ -51,7 +51,7 @@
 
   
 
-  <title>Gestion de la propriété intellectuelle dans la définition et le déploiement d&#39;une approche basée modèle pour l&#39;IS | SM@RT Team</title>
+  <title>Méthodologie de conception de systèmes de simulations en entreprise étendue, basée sur l&#39;ingénierie système dirigée par les modèles | SM@RT Team</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71">
@@ -188,7 +188,7 @@
 
 
   <div class="article-container">
-    <h1 itemprop="name">Gestion de la propriété intellectuelle dans la définition et le déploiement d&#39;une approche basée modèle pour l&#39;IS</h1>
+    <h1 itemprop="name">Méthodologie de conception de systèmes de simulations en entreprise étendue, basée sur l&#39;ingénierie système dirigée par les modèles</h1>
     
 
 <div class="article-metadata">
@@ -233,7 +233,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Gestion%20de%20la%20propri%c3%a9t%c3%a9%20intellectuelle%20dans%20la%20d%c3%a9finition%20et%20le%20d%c3%a9ploiement%20d%27une%20approche%20bas%c3%a9e%20mod%c3%a8le%20pour%20l%27IS&amp;url=%2fSMART%2fsite%2fstudent%2frenan%2f"
+         href="https://twitter.com/intent/tweet?text=M%c3%a9thodologie%20de%20conception%20de%20syst%c3%a8mes%20de%20simulations%20en%20entreprise%20%c3%a9tendue%2c%20bas%c3%a9e%20sur%20l%27ing%c3%a9nierie%20syst%c3%a8me%20dirig%c3%a9e%20par%20les%20mod%c3%a8les&amp;url=%2fSMART%2fsite%2fstudent%2frenan%2f"
          target="_blank">
         <i class="fa fa-twitter"></i>
       </a>
@@ -247,21 +247,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fSMART%2fsite%2fstudent%2frenan%2f&amp;title=Gestion%20de%20la%20propri%c3%a9t%c3%a9%20intellectuelle%20dans%20la%20d%c3%a9finition%20et%20le%20d%c3%a9ploiement%20d%27une%20approche%20bas%c3%a9e%20mod%c3%a8le%20pour%20l%27IS"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fSMART%2fsite%2fstudent%2frenan%2f&amp;title=M%c3%a9thodologie%20de%20conception%20de%20syst%c3%a8mes%20de%20simulations%20en%20entreprise%20%c3%a9tendue%2c%20bas%c3%a9e%20sur%20l%27ing%c3%a9nierie%20syst%c3%a8me%20dirig%c3%a9e%20par%20les%20mod%c3%a8les"
          target="_blank">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fSMART%2fsite%2fstudent%2frenan%2f&amp;title=Gestion%20de%20la%20propri%c3%a9t%c3%a9%20intellectuelle%20dans%20la%20d%c3%a9finition%20et%20le%20d%c3%a9ploiement%20d%27une%20approche%20bas%c3%a9e%20mod%c3%a8le%20pour%20l%27IS"
+         href="http://service.weibo.com/share/share.php?url=%2fSMART%2fsite%2fstudent%2frenan%2f&amp;title=M%c3%a9thodologie%20de%20conception%20de%20syst%c3%a8mes%20de%20simulations%20en%20entreprise%20%c3%a9tendue%2c%20bas%c3%a9e%20sur%20l%27ing%c3%a9nierie%20syst%c3%a8me%20dirig%c3%a9e%20par%20les%20mod%c3%a8les"
          target="_blank">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Gestion%20de%20la%20propri%c3%a9t%c3%a9%20intellectuelle%20dans%20la%20d%c3%a9finition%20et%20le%20d%c3%a9ploiement%20d%27une%20approche%20bas%c3%a9e%20mod%c3%a8le%20pour%20l%27IS&amp;body=%2fSMART%2fsite%2fstudent%2frenan%2f">
+         href="mailto:?subject=M%c3%a9thodologie%20de%20conception%20de%20syst%c3%a8mes%20de%20simulations%20en%20entreprise%20%c3%a9tendue%2c%20bas%c3%a9e%20sur%20l%27ing%c3%a9nierie%20syst%c3%a8me%20dirig%c3%a9e%20par%20les%20mod%c3%a8les&amp;body=%2fSMART%2fsite%2fstudent%2frenan%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
